feat(test): support for starting only one db container in the test context has been added + support for running IT test in the maven verify stage.